templates/vpc.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates a VPC environment.",

    "Parameters": {
        "VPCName": {
            "Type": "String",
            "Description": "Name of the VPC."
        },
        "VPCCidr": {
            "Type": "String",
            "Description": "CIDR IP block of the VPC.",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid CIDR IP block and a valid IP range for the VPC.",
            "Default": "10.10.0.0/16"
        },
        "PublicSubnet1Cidr": {
            "Type": "String",
            "Description": "CIDR IP block for Public Subnet #1.",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid CIDR IP range and a valid subnet range in the VPC.",
            "Default": "10.10.1.0/24"
        },
        "PublicSubnet2Cidr": {
            "Type": "String",
            "Description": "CIDR IP block for Public Subnet #2.",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid CIDR IP range and a valid subnet range in the VPC.",
            "Default": "10.10.2.0/24"
        },
        "PrivateSubnet1Cidr": {
            "Type": "String",
            "Description": "CIDR IP block for Private Subnet #1.",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid CIDR IP range and a valid subnet range in the VPC.",
            "Default": "10.10.3.0/24"
        },
        "PrivateSubnet2Cidr": {
            "Type": "String",
            "Description": "CIDR IP block for Private Subnet #2.",
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]).){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "Must be a valid CIDR IP range and a valid subnet range in the VPC.",
            "Default": "10.10.4.0/24"
        }
    },

    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {"Ref": "VPCCidr"},
                "InstanceTenancy": "default",
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "Tags": [{"Key": "Name", "Value": {"Ref": "VPCName"}}]
            }
        },
        "PublicSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "CidrBlock": {"Ref": "PublicSubnet1Cidr"},
                "AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-public-subnet-1"}}]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "CidrBlock": {"Ref": "PublicSubnet2Cidr"},
                "AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-public-subnet-2"}}]
            }
        },
        "PrivateSubnet1": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "CidrBlock": {"Ref": "PrivateSubnet1Cidr"},
                "AvailabilityZone": {"Fn::Select": ["0", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-private-subnet-1"}}]
            }
        },
        "PrivateSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "CidrBlock": {"Ref": "PrivateSubnet2Cidr"},
                "AvailabilityZone": {"Fn::Select": ["1", {"Fn::GetAZs": {"Ref": "AWS::Region"}}]},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-private-subnet-2"}}]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-inet-gateway"}}]
            }
        },
        "NatGateway": {
            "Type": "AWS::EC2::NatGateway",
            "Properties": {
                "SubnetId": {"Ref": "PublicSubnet1"},
                "AllocationId": {"Fn::GetAtt": ["ElasticIPAddress", "AllocationId"]},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-nat-gateway"}}]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-public-route-table"}}]
            }
        },
        "PrivateRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${VPCName}-private-route-table"}}]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {"Ref": "PublicRouteTable"},
                "GatewayId": {"Ref": "InternetGateway"}
            }
        },
        "PrivateRoute": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "RouteTableId": {"Ref": "PrivateRouteTable"},
                "NatGatewayId": {"Ref": "NatGateway"}
            }
        },
        "RouteTableAssociationPublicSubnet1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {"Ref": "PublicRouteTable"},
                "SubnetId": {"Ref": "PublicSubnet1"}
            }
        },
        "RouteTableAssociationPublicSubnet2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {"Ref": "PublicRouteTable"},
                "SubnetId": {"Ref": "PublicSubnet2"}
            }
        },
        "RouteTableAssociationPrivateSubnet1": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {"Ref": "PrivateRouteTable"},
                "SubnetId": {"Ref": "PrivateSubnet1"}
            }
        },
        "RouteTableAssociationPrivateSubnet2": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": {"Ref": "PrivateRouteTable"},
                "SubnetId": {"Ref": "PrivateSubnet2"}
            }
        },
        "AttachInetGateway": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {"Ref": "VPC"},
                "InternetGatewayId": {"Ref": "InternetGateway"}
            }
        },
        "ElasticIPAddress": {
            "Type": "AWS::EC2::EIP",
            "DependsOn": "AttachInetGateway",
            "Properties": {
                "Domain": "vpc"
            }
        }
    },

    "Outputs": {
        "OutputVPC": {
            "Description": "VPC ID",
            "Export": {"Name": {"Fn::Sub": "${VPCName}-vpc-id"}},
            "Value":  {"Ref": "VPC"}
        },
        "OutputPublicSubnet1": {
            "Description": "Public Subnet #1",
            "Export": {"Name": {"Fn::Sub": "${VPCName}-public-subnet-1"}},
            "Value":  {"Ref": "PublicSubnet1"}
        },
        "OutputPublicSubnet2": {
            "Description": "Public Subnet #2",
            "Export": {"Name": {"Fn::Sub": "${VPCName}-public-subnet-2"}},
            "Value":  {"Ref": "PublicSubnet2"}
        },
        "OutputPrivateSubnet1": {
            "Description": "Private Subnet #1",
            "Export": {"Name": {"Fn::Sub": "${VPCName}-private-subnet-1"}},
            "Value":  {"Ref": "PrivateSubnet1"}
        },
        "OutputPrivateSubnet2": {
            "Description": "Private Subnet #2",
            "Export": {"Name": {"Fn::Sub": "${VPCName}-private-subnet-2"}},
            "Value":  {"Ref": "PrivateSubnet2"}
        }
    },

    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                { "Label": {"default": "General"}, "Parameters": ["VPCName", "VPCCidr"] },
                { "Label": {"default": "Subnets"}, "Parameters": ["PublicSubnet1Cidr", "PublicSubnet2Cidr", "PrivateSubnet1Cidr", "PrivateSubnet2Cidr"] }
            ],
            "ParameterLabels": {
                "VPCName": {"default": "VPC Name"},
                "VPCCidr": {"default": "VPC CIDR"},
                "PublicSubnet1Cidr": {"default": "Public Subnet #1 CIDR"},
                "PublicSubnet2Cidr": {"default": "Public Subnet #2 CIDR"},
                "PrivateSubnet1Cidr": {"default": "Private Subnet #1 CIDR"},
                "PrivateSubnet2Cidr": {"default": "Private Subnet #2 CIDR"}
            }
        }
    }
}
